# embedded-audio

./: .gitignore  Cargo.toml  README.md
embedded-audio/: Cargo.toml
embedded-audio-driver/: Cargo.toml  README.md
embedded-audio-driver/src/: databus.rs  decoder.rs  element.rs  encoder.rs  info.rs  lib.rs  payload.rs  port.rs  reader.rs  slot.rs  stream.rs  transform.rs  writer.rs
embedded-audio-driver/src/stream/: dac.rs  i2s.rs  mod.rs
embedded-audio/src/: lib.rs  pipeline.rs  relay.rs  ringbuffer.rs
embedded-audio/src/databus/: mod.rs  slot.rs  static_ringbuffer.rs
embedded-audio/src/decoder/: mod.rs  reader.rs  wav.rs
embedded-audio/src/encoder/: mod.rs  wav.rs  writer.rs
embedded-audio/src/generator/: mod.rs  sine_wave.rs
embedded-audio/src/reader_element/: mod.rs  sine_wave.rs
embedded-audio/src/stream/: cpal_output.rs  cpal_stream.rs  mod.rs
embedded-audio/src/transform/: gain.rs
embedded-audio/src/transformer/: gain.rs  mod.rs
examples/std/: Cargo.toml
