[package]
name = "embedded-audio-driver"
version = "0.0.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
repository = "https://github.com/decaday/embedded-audio"
documentation = "https://docs.rs/embedded-audio-driver"
homepage = "https://github.com/decaday/embedded-audio"
categories = ["embedded", "no-std", "hardware-support"]
description = "`embedded-audio` interface crate"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
ringbuffer = "0.15.0"
embedded-io = "0.6"
embassy-sync = { version = "0.7.0" }
cfg-if = { version = "1.0.1", features = ["core"] }

[features]
std = ["embedded-io/std"]
