[package]
name = "embedded-audio-driver"
version = "0.0.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
repository = "https://github.com/decaday/embedded-audio"
documentation = "https://docs.rs/embedded-audio-driver"
homepage = "https://github.com/decaday/embedded-audio"
categories = ["embedded", "no-std", "hardware-support"]
description = "`embedded-audio` interface crate"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
rivulets-driver = { version = "*", path = "../../rivulets/rivulets-driver" }

embedded-io = "0.6"
embassy-sync = { version = "0.7.0" }
cfg-if = { version = "1.0.1", features = ["core"] }
bitfield-struct = "0.11.0"

[features]
std = [
    "embedded-io/std",
    "rivulets-driver/std",
]
