[package]
name = "embedded-audio"
version = "0.0.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>"]
repository = "https://github.com/decaday/embedded-audio"
documentation = "https://docs.rs/embedded-audio"
homepage = "https://github.com/decaday/embedded-audio"
categories = ["embedded", "no-std", "hardware-support"]
description = "Embedded Audio Driver"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
# embedded-audio-driver = { version = "0.0.0" }
embedded-audio-driver = { path = "../embedded-audio-driver" }

defmt = { version = "0.3", optional = true }

embassy-sync = { version = "0.7.0" }
# embassy-time = { version = "0.3.2" }

# ringbuffer = "0.15.0"
embedded-io = "0.6"
ringbuf = { version = "0.4.7", default-features = false }
cfg-if = {version = "1.0.1", features = ["core"]}
embassy-sync = { version = "0.7.0" }
# embassy-time = { version = "0.3.2" }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.27", default-features = false, optional = true }

cpal = { version = "0.15.3", optional = true }

[dev-dependencies]
embedded-io-adapters = { version = "0.6", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
critical-section = { version = "1.2.0", features = ["std"] }


[features]
default = ["std"]
defmt = ["dep:defmt"]
# log = ["embassy-sync/log", "embassy-time/log"]
# std = ["embassy-time/std"]
std = [
    "alloc",
    "embedded-io/std", 
    "embedded-audio-driver/std", 
    # "embassy-time/std",
    "ringbuf/std",
    "dep:cpal",
    "log",
]

alloc = ["ringbuf/alloc"]
